fix: media content block at forced dark mode

--- a/src/blocks/MediaContentAccordion/Desktop/index.module.scss
+++ b/src/blocks/MediaContentAccordion/Desktop/index.module.scss
@@ -135,7 +135,7 @@
     }
   }
 
-  [data-theme="light"]  & {
+  @include data-theme-selector('light') {
     border-top: 1px solid var(--grid-line-light);
 
     &:before {
@@ -149,6 +149,24 @@
     &:hover {
       .togglerTitle {
         color: var(--color-base-1000);
+      }
+    }
+  }
+
+  @include data-theme-selector('dark') {
+    border-top: 1px solid var(--grid-line-dark);
+
+    &:before {
+      background: var(--color-base-0);
+    }
+
+    &:last-child {
+      border-bottom: 1px solid var(--grid-line-dark);
+    }
+
+    &:hover {
+      .togglerTitle {
+        color: var(--color-base-0);
       }
     }
   }
@@ -176,10 +194,18 @@
     }
   }
 
-  [data-theme="light"]  & {
+  @include data-theme-selector('light') {
     &:hover {
       .title {
         color: var(--color-base-1000);
+      }
+    }
+  }
+
+  @include data-theme-selector('dark') {
+    &:hover {
+      .title {
+        color: var(--color-base-0);
       }
     }
   }
@@ -190,8 +216,12 @@
   font-weight: 500;
   transition: color 0.3s ease-in-out;
 
-  [data-theme="light"]  & {
+  @include data-theme-selector('light') {
     color: var(--text-light);
+  }
+
+  @include data-theme-selector('dark') {
+    color: var(--text-dark);
   }
 }
 
@@ -201,11 +231,13 @@
 
   .togglerTitle {
     color: var(--color-base-0);
-  }
 
-  [data-theme="light"]  & {
-    .togglerTitle {
+    @include data-theme-selector('light') {
       color: var(--color-base-1000);
+    }
+
+    @include data-theme-selector('dark') {
+      color: var(--color-base-0);
     }
   }
 }
@@ -229,8 +261,12 @@
   color: var(--text-dark);
   padding: 0 calc(var(--base) * 1.5) calc(var(--base) * 1.5) calc(var(--base) * 1.5);
 
-  [data-theme="light"]  & {
+  @include data-theme-selector('light') {
     color: var(--text-light);
+  }
+
+  @include data-theme-selector('dark') {
+    color: var(--text-dark);
   }
 }
 
@@ -259,12 +295,22 @@
     }
   }
 
-  [data-theme="light"]  & {
+  @include data-theme-selector('light') {
     color: var(--color-base-1000);
 
     .arrowIcon {
       path {
         stroke: var(--color-base-1000);
+      }
+    }
+  }
+
+  @include data-theme-selector('dark') {
+    color: var(--color-base-0);
+
+    .arrowIcon {
+      path {
+        stroke: var(--color-base-0);
       }
     }
   }
